# agentcontracts

./: .gitignore  AGENT_CONTRACT.yaml  AUDIT.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  RC_VALIDATION.md  README.md  RELEASE_PLAN.md  SECURITY.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  security_hardening.yml
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  performance-baselines.json
docs/: adoption-guide.md  api-reference.md  migration-0.2-to-1.0.md  troubleshooting.md
docs/plans/: 2026-03-25-agent-contracts-v0.1-design.md  2026-03-25-agent-contracts-v0.1-plan.md
examples/: README.md  _demo_helpers.py  cost_controlled.yaml  demo_blocked_command.yaml  demo_blocked_file_write.yaml  demo_failed_checks.yaml  repo_build_agent.yaml  run_blocked_command.py  run_blocked_file_write.py  run_failed_checks.py  run_green_pass.py  simple_chatbot.yaml  support_triage.yaml
examples/verdicts/: blocked-command.json  blocked-file-write.json  failed-checks.json  green-pass.json
schemas/: agent-contract.schema.json
scripts/: generate_api_reference.py
spec/: SPECIFICATION.md
src/agent_contracts/: __init__.py  _version.py  budgets.py  cli.py  composition.py  effects.py  enforcer.py  init_from_trace.py  loader.py  postconditions.py  schema.py  types.py  violations.py
src/agent_contracts/adapters/: __init__.py  _shared.py  claude_agent.py  crewai.py  langchain.py  openai_agents.py  pydantic_ai.py
src/agent_contracts/schemas/: agent-contract.schema.json  verdict.schema.json
tests/: conftest.py  test_action_yml.py  test_budgets.py  test_ci_workflow.py  test_cli.py  test_composition.py  test_effects.py  test_enforcer.py  test_examples.py  test_init_from_trace.py  test_loader.py  test_performance_baselines.py  test_postconditions.py  test_preconditions.py  test_release_workflow.py
tests/test_adapters/: test_claude_agent.py  test_crewai.py  test_langchain.py  test_openai_agents.py  test_pydantic_ai.py
